www/css/main.css
/* ... */
.tasksHeaderOnSubjectPage {
    display: inline-block;
    font-size: 1.8em;
    font-family: Acme, sans-serif;
    text-transform: uppercase;
    color: white;
    opacity: .5;
}

.subjectArea {
    overflow: auto;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    display: none;
    height: 668px;
}

#subjectsList{
    overflow: auto;
    overflow-y:scroll;
    -webkit-overflow-scrolling: touch;
    height: 550px;


}

.subjectName {
    padding: 15px;
    border-bottom: 1.5px solid #BCDBE1;
}

.subjectName:last-child {
    margin-bottom: 50px;                /*This makes sure you can scroll down far enough to see the whole name*/
}

#addSubjectButton {
    color: white;
    border: none;
    font-size: 1.2em;
    height: 70px;
    width: 100%;
    text-align: center;
    background-color: #95CAAD;
    -webkit-box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.30);
    -moz-box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.30);
    box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.30);
    cursor: pointer;
}

#addSubjectButton:hover{
    -webkit-box-shadow: -1px 13px 21px -10px rgba(151, 137, 151, 0.4);
    -moz-box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.40);
    box-shadow: -1px 13px 21px -10px rgba(163,148,163,0.40);
}

.completedTasksButton{
    display: block;
    background-color: transparent;
    color: white;
    font-size: 1.1em;
    width: 250px;
    margin: auto;
    margin-bottom: 50px;
    border: none;
}

/*.errorMessage {*/
    /*color: red;*/
/*}*/

/*===================================================================================================================*/
/* TODOTASK CARDS ON SUBJECTS PAGE*/
/*===================================================================================================================*/

.todoWrapper {
    overflow-x: hidden;
    width: 85%;
    margin: auto;
    padding-bottom: 60px;
}

.todoTask {
    position: relative;
    width:100%;
    padding:15px;
    display:inline-block;
    background-color: #f7f7f7;
    margin-bottom: 6px;
}

/*.todoTask input{*/
    /*border: none;*/
    /*background-color: transparent;*/
    /*opacity: 1;*/
/*}*/

.todoDate{
    position: absolute;
    right: 45px;
    padding: 0px;
    font-size: 1em;
    opacity: 1;
}

.todoDescription {
    position: absolute;
    width: 40%;
    left: 260px;
    bottom: 15px;
    opacity: .8;
    font-size: .9em;
}

.todoTitle {
    font-size: 1em;
    width: 250px;
    opacity: 1;
}

/*==================================================================================================*/
/* ADD TASKS IN BULK */
/*==================================================================================================*/

.bulkWrapper {
    position: relative;
    width:85%;
    display: block;
    margin: auto;
    margin-bottom: 20px;
    height: 50px;
    margin-bottom: 30px;
}

.bulkText {
    position: absolute;
    border: 0;
    width: 100%;
    color: #607A93;
    background-color: rgba(255, 255, 255, .4);
    font-size: 1.0em;
    padding: 15px;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}


.bulkText::-webkit-input-placeholder {color: white; margin-left: 15px;}
.bulkText:-moz-placeholder {color: white;  margin-left: 15px;} /* Firefox 18- */
.bulkText::-moz-placeholder {color: white;  margin-left: 15px;} /* Firefox 19+ */
.bulkText:-ms-input-placeholder {color: white;  margin-left: 15px;}


.bulkSubmit {
    position: absolute;
    right: 8px;
    top: 15%;
    border: none;
    font-family: acme;
    text-transform: uppercase;
    border-radius: 5px;
    width: 20%;
    height: 70%;
    background-color: white;
    font-size: 1em;
    -webkit-tap-highlight-color: transparent;
}

/*==================================================================================================*/
/* COLOUR PICKERS */
/*==================================================================================================*/

#colourPalette {
    position: absolute;
    width: 180px;
    height: 210px;
    background-color: #ffffff;
    display: none;
    padding: 10px;
    box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.4);
}

.point {
    position: absolute;
    top: -25px;
    left: 93px;
    width: 0;
    height: 0;
    border-left: 30px solid transparent;
    border-right: 30px solid transparent;
    border-bottom: 30px solid white;
}

#colourPaletteAddSubject{
    position: relative;
    width: 100%;
}

.colourOption {
    width: 100%;
    padding-bottom: 100%;
    box-sizing: border-box;
    cursor: pointer;}


.colourOptionNew {
    width: 100%;
    padding-bottom: 100%;
    box-sizing: border-box;
    cursor: pointer;
}

.chosenColour {
    -webkit-box-shadow:inset 0px 0px 0px 5px rgba(255, 255, 255, .4);
    -moz-box-shadow:inset 0px 0px 0px 5px rgba(255, 255, 255, .4);
    box-shadow:inset 0px 0px 0px 5px rgba(255, 255, 255, .4);
}

.usedColour:after {
    font-family: 'FontAwesome';
    color: white;
    content: '';
    font-size: .1em;
    float: right;
    margin-right: 4px;
    margin-top: 10px;
    opacity: .6;
}

.colourMessage {
    display: inline-block;
    color: #607A93;
    line-height: 1.6em;
}

#changeColourButton {
    position: absolute;
    display: block;
    right: 0px;
    left: 0;
    margin: auto;
    color: white;
    border: none;
    font-family: acme;
    text-transform: uppercase;
    border-radius: 5px;
    width: 80%;
    height: 35px;
    background-color: rgb(149, 202, 173);
    font-size: 1em;
    bottom: 20px;

}
/*==================================================================================================*/
/* COLOUR PICKER COLUMNS */
/*==================================================================================================*/

/*  SECTIONS  */
.colourSection {
    clear: both;
    padding: 0px;
    margin: 0px;
}
/* ... */

